# AiAgents

./: .gitignore  README.md  crewai-01.ipynb  e2b.Dockerfile  e2b2.Dockerfile  example.env  pyproject.toml  python-project-management.txt  pyvenv.cfg
learn-bash/: basic-for-loop.sh  basic-function.sh  enter-student-details.sh  log-file-n-permission.sh  mini-program.sh  read-file-prompt.sh  sum-of-first-n.sh
learn-bash/functions/: function-sum.sh  math-utils-test.sh  math-utils.sh
src/agno_agents/: agno_001.py  agno_custom_tool.py  agno_pydantic.py  agno_team.py
src/course-notebooks/: crewai-01.ipynb  crewai-02.ipynb  crewai-03.ipynb  crewai-06_job_application_crew.ipynb
src/course2-notebooks/: L_1.ipynb  L_5.ipynb
src/crewai-course-notebooks/: crewai-02_customer_support.ipynb  crewai-04_event_planning.ipynb  crewai-05_collaboration_financial_analysis.ipynb
src/crewai-course2-notebooks/: L_1.ipynb  L_2.ipynb  L_3.ipynb  L_4.ipynb
src/crewai_codes/: crewai--001.py  crewai--002.ipynb  crewai--003.ipynb
src/e2b_codes/: e2b-interpreter.py  e2b_crewai.py  e2b_install_pkg.py  e2b_langchain.py  e2b_langchain_agent.py  e2b_langchain_function_call.py  e2b_llamaindex.py  e2b_ollama.py  e2b_openai.py  e2b_openai_function_calling.py  e2b_upload_download.py  read.txt
src/langgraphs/: Lesson_1_Student.ipynb  __init__.py  langgraph--001.py
src/lite_llm/: litellm001.py  litellm002.py
src/ollama_codes/: ollama.md  ollama_ocr.py  ollama_structured_output.py  ollama_vision.py
src/smol_agents/: smolagents001.py  smolagents002.py  smolagents003.py  (+7 more)
util/: __init__.py
(+7 files in other folders)
