[tool.poetry]
name = "AiAgents"
version = "0.1.0"
description = "AI Agents Using crewai"
authors = ["Krishna Kumar Singh <kwishna@gmail.com>"]
readme = "README.md"
package-mode = false

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"


openai = "^1.54.4"
crewai = {extras = ["tools"], version = "^0.80.0"}
ipykernel = "^6.29.5"
jsonref = "^1.1.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


