[project]
name = "aiagents"
version = "0.1.0"
description = "exploring ai agents"
readme = "README.md"
requires-python = ">=3.12.7"

[tool.poetry]
name = "AiAgents"
version = "0.1.0"
description = "AI Agents Using crewai"
authors = ["Krishna Kumar Singh <kwishna@gmail.com>"]
readme = "README.md"
package-mode = false

[virtualenvs]
in-project = true

#[tool.poetry.dependencies]
#python = ">=3.10,<=3.13"

openai = "^1.54.4"
crewai = {extras = ["tools"], version = "^0.80.0"}
ipykernel = "^6.29.5"
jsonref = "^1.1.0"
langchain = {extras = ["all"], version = "^0.3.13"}
langgraph = {extras = ["all"], version = "^0.2.60"}
langchain-aws = "^0.2.10"
smolagents = "^1.1.0"
litellm = "^1.57.3"
accelerate = "^1.2.1"
langchain-core = "^0.3.33"
ollama = "^0.4.7"
agno = "^1.0.3"
duckduckgo-search = "^7.3.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"